<resources>
    <string name="app_name">MyFin</string>
    <string name="transaction">Transaksi</string>
    <string name="amount">Nilai</string>
    <string name="type">Tipe</string>
    <string name="source">Sumber</string>
    <string name="date">Tanggal</string>
    <string name="reason">Alasan</string>
    <string name="delete">Hapus</string>
    <string name="save">Simpan</string>
    <string name="edit">Ubah</string>
    <string name="add">Tambah</string>
    <string name="in">IN</string>
    <string name="out">OUT</string>
    <string name="icon_in_out">Ikon untuk uang yang Masuk atau Keluar</string>
    <string name="button_tambah_transaksi">Button tambah transaksi</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string-array name="type_transactions">
        <item>Masuk</item>
        <item>Keluar</item>
    </string-array>
    <string-array name="source_transactions">
        <item>Gaji</item>
        <item>Lainnya</item>
    </string-array>
</resources>
